--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,2 @@
-<p>home works!</p>
-
+<p style="font-size: 30pt"font-size>{{ num }}</p>
+<button (click)="adiciona1()" class="btn btn-success">Adiciona 1</button>
