--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="fixed-bottom">
-  <footer class="py-3 my-4">
+
+  <footer class="fixed-bottom py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item">
         <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
@@ -19,4 +19,4 @@
     </ul>
     <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
   </footer>
-</div>
+
