--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,3 +1,6 @@
-<ul>
-  <li *ngFor="let item of users">{{ item }}</li>
+<ul class="list-button">
+  <li class="mb-2" *ngFor="let user of users">
+  <button [routerLink]="'/users/' + user" class="btn btn-primary">
+    {{ user }}</button>
+</li>
 </ul>
