--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,10 @@
 <ul class="list-button">
   <li class="mb-2" *ngFor="let user of users">
-  <button [routerLink]="'/users/' + user" class="btn btn-primary">
+  <button [routerLink]="'/users/details'"
+  [queryParams]="{
+    username: user
+  }"
+  class="btn btn-primary">
     {{ user }}</button>
 </li>
 </ul>
